--- a/app/src/main/res/layout/education_bac2.xml
+++ b/app/src/main/res/layout/education_bac2.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/headerTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Инфокоммуникационные сети и системы связи"
+                android:text="Инфокоммуникационные технологии в услугах связи"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:maxLines="2"
@@ -69,28 +69,48 @@
                     android:id="@+id/helpText1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Нормативный срок обучения по специальности:"
+                    android:text="Профиль «Инфокоммуникационные технологии в услугах связи»
+предназначен для подготовки бакалавров, дальнейшая деятельность которых направлена на разработку новых сервисов в системах инфокоммуникаций, на основе которых пользователям предоставят наборы новых услуг.
+\n
+\nСтуденты данного профиля по окончании обучения должны знать приоритетные направления развития информационно-коммуникационных технологий связи, в том числе, автоматизацию бизнес-процессов при цифровой трансформации организаций, современную программно-конфигурируемую информационную систему передачи, предоставляющим широкий спектр информационных и аналитических сервисов на базе облачные платформ таких как: PaaS (Platform as a Service); IaaS (Infrastructure as a Service); SaaS (Software as a Service), архитектуру и протоколы мультисервисных сетей, беспроводных сетей и их услуги, методы и средства сетевой безопасности и защиты информации в современных информационно-телекоммуникационных сетях и услугах, администрирование в инфокоммуникационных системах, настройку сетевых операционных систем, планирование и проектирование сетей и услуг связи, проектирование серверной части приложения баз данных, создание и управление масштабируемым веб-сайтом и приложениями, современные коммутационные платформы, сервисные возможности современных учрежденческих коммуникационных систем, настройку коммуникационного оборудования, проектирование сетей связи.
+\n
+\n Выпускники института, обучающиеся по профилю «Инфокоммуникационные технологии в услугах связи» будут востребованы у всех крупных операторов сотовой связи, операторов, предоставляющих магистральные каналы (ПАО Ростелеком и др.) и у всех других операторов, предоставляющих населению услуги инфокоммуникаций.\n"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"
+                    android:lineSpacingExtra="4dp"
+                    tools:ignore="HardcodedText,VisualLintLongText" />
+
+                <TextView
+                    android:id="@+id/helpText2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Основные виды деятельности: Разработка и эксплуатация сервисов и услуг связи инфокоммуникационных сетей и систем:\n"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText" />
-                <TextView
-                    android:id="@+id/helpText2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="-на базе основного общего образования (9 классов) – 4 года 10 месяцев.
-\n-на базе среднего общего образования (11 классов) – 3 года 10 месяцев.\n"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    android:lineSpacingExtra="4dp"
-                    tools:ignore="HardcodedText,VisualLintLongText" />
 
                 <TextView
                     android:id="@+id/helpText3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Квалификация выпускника – техник\n"
+                    android:text="- Проектирование телекоммуникационных сетей;
+\n- Пуско-наладка инфраструктуры сети на основе различных операционных систем;
+\n- Администрирование и эксплуатация телекоммуникационных сетей на основе различных операционных систем;
+\n- Пусконаладка современного телекоммуникационного оборудования различных фирм производителей;
+\n- Эксплуатация оконечного оборудования телекоммуникационных сетей и систем;
+\n- Обеспечение безопасности хранения и передачи информации в телекоммуникационных сетях.\n"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"
+                    android:lineSpacingExtra="4dp"
+                    tools:ignore="HardcodedText,VisualLintLongText" />
+
+                <TextView
+                    android:id="@+id/helpText4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Области профессиональной деятельности и (или) сферы профессиональной деятельности:"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -98,26 +118,15 @@
                     tools:ignore="HardcodedText" />
 
                 <TextView
-                    android:id="@+id/helpText4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text=" Человечество движется по пути создания глобального информационного общества. Его основой становится всемирная информационная инфраструктура, составляющей которой являются мощные транспортные сети связи и распределенные сети доступа, предоставляющие информацию пользователям.\n
-Объём информации, передаваемой через информационно-телекоммуникационную инфраструктуру мира, удваивается каждые 2-3 года. Вся информация, которая создаётся в электронном виде, не может «добраться» до пункта назначения и обратно без обеспечения этого процесса специалистами Инфокоммуникационные сети и системы связи.\n
-Связь местная, между регионами нашей страны и международная связь осуществляются с комплексов, состоящих из линий связи и оборудования. Используются аналоговые и цифровые системы передачи, волоконно-оптические линии связи. По ним передаются все виды информации – аудио, видео, мультимедиа (т.е. телефонная связь, передача данных, телевидение, радиовещание, сигналы межсетевого взаимодействия Интернет и т.д.). Когда вы, например, работаете используя сети Интернет, вы даже не знаете, где находится тот информационный ресурс, к которому вы обращаетесь – в России, Европе или Америке, поскольку все соединяющие вас каналы являются «прозрачными» для всех видов информации.\n
-Методы построения компьютерных сетей и междугородных и международных сетей связи аналогичны, при изучении таких предметов как «Волоконно-оптические линии и системы передачи», «Цифровые системы передачи», «Транспортные сети», будущие выпускники этой специальности на достаточно высоком уровне узнают и принципы работы компьютерных сетей, цифровых коммутационных устройств, маршрутизаторов и другого оборудования сетевых технологий.\n"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    android:lineSpacingExtra="4dp"
-                    tools:ignore="HardcodedText,VisualLintLongText" />
-
-                <TextView
                     android:id="@+id/helpText5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Выпускники специальности могут выполнять следующую работу:"
+                    android:text="- Связь, информационные и коммуникационные технологии:
+\n- Специалист по радиосвязи и телекоммуникациям;
+\n- Инженер-проектировщик в области связи (телекоммуникаций);
+\n- Системный администратор информационно-коммуникационных систем.\n"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
-                    android:textStyle="bold"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText" />
 
@@ -125,20 +134,21 @@
                     android:id="@+id/helpText6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="- Техническое обслуживание, настроечные и ремонтные работы на аналоговых и цифровых системах передачи;
-\n- Техническое обслуживание, настроечные и ремонтные работы на волоконно-оптических системах передачи;
-\n- Техническое обслуживание и настроечные работы транспортных сетей любого назначения;
-\n- Техническое обслуживание и настроечные работы линейных сооружений связи – как медных, так и оптических;\n"
+                    android:text="- В настоящее время институт обеспечивает качественную подготовку бакалавров, магистрантов и аспирантов, обеспечивающих передачу различных видов информации (мультимедийного трафика) с использованием современных цифровых технологий, как по локальным, так и по глобальным сетям.
+\n Для организации учебного процесса институт располагает мощной лабораторной базой, оснащенной современными лабораторными установками, компьютерными классами, системами передачи, измерительной техникой отечественных и зарубежных производителей.
+\n Имеющееся лабораторное оборудование используется не только в учебном процессе, но и при проведении научно-исследовательских работ магистрантами и аспирантами. На кафедре организована студенческая научная работа, охватывающая практически все современные цифровые телекоммуникационные технологии. Ежегодно проводятся студенческие научно-практические конференции.
+\n Институт имеет устойчивые связи с телекоммуникационными компаниями Уральского федерального округа, научными и проектными организациями. Предприятиями отрасли связи и массовых коммуникаций. Студенты проходят практику на предприятиях отрасли связи, с которыми заключены договора на прохождение производственной и преддипломной практики: ПАО «Ростелеком» Екатеринбургский филиал ООО, «ПО Промсвязь», ПАО «Ростелеком» Екатеринбургский районный узел связи Екатеринбургского филиала, ФГУП НПО «Автоматика», ПАО «Ростелеком» Курганский филиал, ПАО «Ростелеком» Пермский филиал, Управление специальной связи и информации ФСО России в УрФО, Министерство обороны, ГУ МВД по Свердловской области, ОАО «МТС», Макро-регион «Урал», ОАО «Мегафон», УФ ЗАО «КОМСТАР-Регионы», Уральский филиал ООО «Екатеринбург-2000», ООО «Стройэнергосвязь», ЗАО «Урал-ТрансТелеком», ПО «Западные электрические сети» филиал ОАО «МРСК-Урала», ОАО «Областное телевидение», ЗАО «ЭР-Телеком Холдинг», ОАО «ОблТВ», ООО «УГМК-Телеком», ОАО «МТС» и другие.
+\n В институте имеются авторизованные учебные центры ЗАО «Связьстройдеталь», Компания «3М Россия», «D-Link», студенты могут дополнительно пройти курсы повышения квалификации по данным направлениям, что повышаете их конкурентноспособность на рынке труда.\n"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
-                    tools:ignore="HardcodedText" />
+                    tools:ignore="HardcodedText,VisualLintLongText" />
 
                 <TextView
                     android:id="@+id/helpText7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Выпускники специальности могут работать:"
+                    android:text="Востребованность выпускников:"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -149,9 +159,8 @@
                     android:id="@+id/helpText8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="- На любых узлах связи, принадлежащих как государственным структурам (Минсвязи, Минобороны и т.д.), так и коммерческим организациям (Операторам связи, Интернет-провайдерам и т.д.);
-\n- На обслуживании транспортных сетей;
-\n- В центрах спутниковой связи и т.д.\n"
+                    android:text="Заявки на выпускников превышают количество студентов выпускных курсов.
+\nВсе выпускники востребованы на рынке труда ведущими операторами связи: ПАО 'Ростелеком', ПАО 'МТС', ООО 'ТТК', ПАО 'Вымпелком' (Билайн), ООО 'Мобифон-2000' (Мотив). Кроме этого выпускники работают в многочисленных телекоммуникационных компаниях - интернет провайдерах, а также в составе государственных структур - ФСБ, ФСО, Министерство обороны.\n"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
@@ -172,12 +181,11 @@
                     android:id="@+id/helpText10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="- Выпускник, освоивший основную профессиональную образовательную программу среднего профессионального образования по специальности Инфокоммуникационные сети и системы связи, подготовлен к освоению основной профессиональной образовательной программы высшего профессионального образования и может продолжить обучение в институте связи для получения высшего образования (бакалавриат) по любому профилю направления 11.03.02 'Инфокоммуникационные технологии и системы связи.'"
+                    android:text="Выпускник может продолжить обучение в институте связи для получения высшего образования (магистратура) по направлению 11.04.02 «Инфокоммуникационные технологии и системы связи» и в аспирантуре по направлению 11.06.01 «Электроника, радиотехника и системы связи»\n"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
                     tools:ignore="HardcodedText,VisualLintLongText" />
-
 
 
             </LinearLayout>
