--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -516,6 +516,7 @@
 
                     <!-- Правая карточка -->
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/CardBasic"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
