--- a/app/src/main/res/layout/main_education.xml
+++ b/app/src/main/res/layout/main_education.xml
@@ -297,6 +297,7 @@
 
             <!-- Карточка 09.03.01 -->
             <androidx.cardview.widget.CardView
+                android:id="@+id/Cardbac3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="50dp">
