--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -460,9 +460,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
-                    android:paddingBottom="24dp"
                     android:clipChildren="false"
-                    android:clipToPadding="false">
+                    android:clipToPadding="false"
+                    android:paddingBottom="24dp">
 
                     <!-- Разделительная линия по центру -->
                     <androidx.constraintlayout.widget.Guideline
@@ -482,34 +482,34 @@
                         android:layout_marginBottom="24dp"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="8dp"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/guide3"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
                             android:gravity="center"
+                            android:orientation="vertical"
                             android:padding="16dp"
                             tools:ignore="UseCompoundDrawables">
 
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:src="@drawable/ic_facts"
-                                android:contentDescription="Левая иконка"
                                 android:layout_gravity="center"
+                                android:contentDescription="Левая иконка"
+                                android:src="@drawable/ic_facts"
                                 tools:ignore="HardcodedText" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:gravity="center"
                                 android:text="Факты"
                                 android:textSize="16sp"
                                 android:textStyle="bold"
-                                android:gravity="center"
-                                android:layout_marginTop="8dp"
                                 tools:ignore="HardcodedText" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
@@ -524,34 +524,34 @@
                         android:layout_marginBottom="24dp"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="8dp"
-                        app:layout_constraintStart_toEndOf="@id/guide3"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/guide3"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical"
                             android:gravity="center"
+                            android:orientation="vertical"
                             android:padding="16dp"
                             tools:ignore="UseCompoundDrawables">
 
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:src="@drawable/ic_basic"
-                                android:contentDescription="Правая иконка"
                                 android:layout_gravity="center"
+                                android:contentDescription="Правая иконка"
+                                android:src="@drawable/ic_basic"
                                 tools:ignore="HardcodedText" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:gravity="center"
                                 android:text="@string/basic"
                                 android:textSize="16sp"
                                 android:textStyle="bold"
-                                android:gravity="center"
-                                android:layout_marginTop="8dp"
                                 tools:ignore="HardcodedText" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
