--- a/app/src/main/res/layout/main_basic.xml
+++ b/app/src/main/res/layout/main_basic.xml
@@ -61,35 +61,24 @@
 
                 <!-- Текстовое поле для справки -->
                 <TextView
-                    android:id="@+id/callText"
+                    android:id="@+id/callText1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Понедельник - Пятница:
-\n1 пара:8:30-10:00
-\n   2 пара:10:15-11:45
-\n   3 пара:12:00-13:30
-\n   4 пара:14:15-15:45
-\n   5 пара:16:00-17:30
-\n   6 пара:17:40-19:05
-\n
-\nСуббота:
-\n   1 пара:8:30-10:00
-\n      2 пара:10:15-11:45
-\n      3 пара:12:00-13:30
-\n      4 пара:13:45-15:15
-\n      5 пара:15:30-17:00
-\n      6 пара:17:10-18:40
-\n
-\nПраздничный день:
-\n   1 пара:8:30-10:00
-\n      2 пара:10:15-11:45
-\n      3 пара:12:00-13:30
-\n      4 пара:13:45-14:45
-\n     5 пара:15:00-16:00"
+                    android:text="Студенческий билет\n"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:lineSpacingExtra="4dp"
+                    tools:ignore="HardcodedText,VisualLintLongText" />
+
+                <TextView
+                    android:id="@+id/callText2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Один из важнейших вещей студента - студик"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:lineSpacingExtra="4dp"
-                    android:gravity="center"
                     tools:ignore="HardcodedText,VisualLintLongText" />
             </LinearLayout>
         </ScrollView>
