--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -475,6 +475,7 @@
 
                     <!-- Левая карточка -->
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/CardFacts"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
